# ChangeLog for dev-haskell/network
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/network/ChangeLog,v 1.35 2009/03/24 14:40:20 jer Exp $

  24 Mar 2009; Jeroen Roovers <jer@gentoo.org> network-2.1.0.0.ebuild:
  Stable for HPPA too.

*network-2.2.0.1 (08 Mar 2009)

  08 Mar 2009; Lennart Kolmodin <kolmodin@gentoo.org>
  +network-2.2.0.1.ebuild:
  Version bump

*network-2.2.0.0 (04 Oct 2008)

  04 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  +network-2.2.0.0.ebuild:
  Add network-2.2.0.0 to solve bug #227515.

  04 Oct 2008; Ferris McCormick <fmccor@gentoo.org> network-2.1.0.0.ebuild:
  Sparc stable --- Bug #230919 and Bug #239368.

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> network-2.1.0.0.ebuild:
  Add ~ia64

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> network-2.0.ebuild,
  network-2.0.1.ebuild, network-2.1.0.0.ebuild:
  Marked ~hppa too.

  06 Jul 2008; Markus Meier <maekke@gentoo.org> network-2.1.0.0.ebuild:
  amd64/x86 stable, bug #230919

*network-2.1.0.0 (20 Dec 2007)

  20 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +network-2.1.0.0.ebuild:
  New version. Released with ghc-6.8 but works with ghc-6.6.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> network-2.0.1.ebuild:
  amd64 stable wrt #201984

  16 Dec 2007; nixnut <nixnut@gentoo.org> network-2.0.1.ebuild:
  Stable on ppc wrt bug 201984

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> network-2.0.ebuild,
  network-2.0.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> network-1.0.ebuild:
  Remove unnecessary blocker.

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> network-2.0.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> network-2.0.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> network-2.0.1.ebuild:
  stable x86, bug 201984
