@@ -2,9 +2,11 @@ DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c82
 DIST network-2.1.0.0.tar.gz 108096 RMD160 0731f0dce9977ec5e1a90bb3c1701c4754bce886 SHA1 1e67f86a0af3be167c7968b3ddfafa61557486c2 SHA256 e39a731740f357900ea2de9eb071399c438b02018436f2ba6e7decf7f7988aba
 DIST network-2.2.0.0.tar.gz 108063 RMD160 29210bd6b55e8499a98e463727037c7f016a4bc3 SHA1 d7e919cf6265534f9369fd854b722f2a818d68b7 SHA256 ca1b8083600faed1ad6daef910fded2619a19dd9649f2c723bbf17d63cad44fd
 DIST network-2.2.0.1.tar.gz 108865 RMD160 dd5f1288cf67a53c605413b30cc2cdd171a959f6 SHA1 51894f37638735115bd6b51b2a59f25f8b0f59ca SHA256 f2fb06a1d2595f0e31cc7e13a1565ea98a9998c68cb628108d9c164a52c2e8b2
+DIST network-2.2.1.tar.gz 111070 RMD160 7fab4f5c2aeaf10623d65ae23b980674840a1ce0 SHA1 bd57f3736bd2fecf87a4989da9eea6e1d78ca743 SHA256 111e4963a0a979570993e79511a778b267ef58df35320d1ddda61a869259b63c
 EBUILD network-2.0.1.ebuild 681 RMD160 d8a33fbd786a0c70a6d50a9a7312af5cdeeb12ab SHA1 1d79b645ff33e3c7ad64ad5b04e946987a2f2c9d SHA256 241683ea0194c7406e5210e1fd9d3d59eb5e1a29076b35dc7da82b779849bfcb
 EBUILD network-2.1.0.0.ebuild 561 RMD160 6078496da5756c429808bf858057f7e0c4269e35 SHA1 6969c1ea2fcd05c8da5da9eb91135e424e38c91c SHA256 8b7553308542371375c644dd227d9f5f843eb3c69ed01a810204cfae73f7126a
 EBUILD network-2.2.0.0.ebuild 568 RMD160 635ed0a73d9ddda20d5f6a284ec41d744ccf2f50 SHA1 c6feb3ba7a16f30625eee4ec68f399164e74b482 SHA256 01027e109779efa524c263a7233ad0603bccc6db55b9c84d2d2a63419e79a731
 EBUILD network-2.2.0.1.ebuild 600 RMD160 f8b5b2497f4bf73b63dcad8b302c8b5c4f0063a5 SHA1 3072d20c6bf90ce0dfcc87b9dea2924911ce673b SHA256 0f5d6a322339a7aa785774f9bee9232d4c29e60256d16d8daf2e0e1ce38f5ecf
-MISC ChangeLog 4074 RMD160 045bbdcb833bfa6a078fcdaf14d3e17b8b4e9e67 SHA1 bea9eb841352eb131ce01dbceef6b6c98493aab7 SHA256 e8aa8031b6454558e9950d086b07c96e3878774af8bfa4fe49bf122b99151544
+EBUILD network-2.2.1.ebuild 664 RMD160 a96d1317d6b4e7d4b6f798680fc97ee9521f07fb SHA1 ae8490214f516ff0416816e9da4f9e724bf0008e SHA256 08c4c9e7b553471766caf2a5999ec76e8553d9998ff943aa2fce90b451205bd1
+MISC ChangeLog 4203 RMD160 95b184c25ff1cfdec7a0cddf78c5bd3d4028ff71 SHA1 ea6ab951adb168644a670664756a6dcf09841724 SHA256 06f1a39701310cca228fd652dc23873b28289838e82b33a6a4e5521c7fa6153a
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
